data/collection/fixes/descriptions/scala/scala-7033
```scala
scala> class X[X](val a: Any)
defined class X

scala> implicit class X[X](val a: Any)
<console>:10: error: X does not take type parameters
       implicit class X[X](val a: Any)
                      ^
```